Fixed Admin login and made Log Out Button visible when admin is logged in.

--- a/Client/src/app/navbar/navbar.component.css
+++ b/Client/src/app/navbar/navbar.component.css
@@ -157,6 +157,11 @@ input:focus, textarea:focus, select:focus {
   cursor: pointer;
 }
 
+#admin-log-out a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 #login-or-register a {
   color: white;
 }
